Añadir pantalla de contratos y clase de empleado; actualizar diseño del dashboard y mejorar el área de empleados activos

--- a/FRONTEND_PAYROLL/src/index.css
+++ b/FRONTEND_PAYROLL/src/index.css
@@ -91,3 +91,10 @@ body {
 ul {
   list-style-type: none;
 }
+
+body {
+  position: relative; /* opcional si estás usando fixed en Toaster */
+  overflow-x: hidden; /* ok */
+  overflow-y: auto;   /* ok */
+}
+
