--- a/FRONTEND_PAYROLL/src/index.css
+++ b/FRONTEND_PAYROLL/src/index.css
@@ -7,6 +7,10 @@ body {
   overflow: hidden;
 }
 
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
